# rules_swift_package_manager

./: .bazelrc  MODULE.bazel
examples/grpc_example/: BUILD.bazel  MODULE.bazel  Package.swift
examples/grpc_example/sources/: BUILD.bazel
examples/grpc_package_example/: MODULE.bazel
examples/grpc_usage_example/: BUILD.bazel  client_main.swift  client_unit_test.swift  server_main.swift
gazelle/: resolve.go
