load("@rules_proto//proto:defs.bzl", "proto_library")
load(
    "@build_bazel_rules_swift//swift:swift.bzl",
    "swift_grpc_library",
    "swift_proto_library",
)

proto_library(
    name = "echo_proto",
    srcs = ["echo.proto"],
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
    visibility = ["//visibility:public"],
)

swift_proto_library(
    name = "echo_proto_swift",
    deps = [":echo_proto"],
    visibility = ["//visibility:public"],
)

swift_grpc_library(
    name = "echo_client_services_swift",
    srcs = [":echo_proto"],
    flavor = "client",
    deps = [":echo_proto_swift"],
    visibility = ["//visibility:public"],
)

swift_grpc_library(
    name = "echo_client_test_stubs_swift",
    srcs = [":echo_proto"],
    flavor = "client_stubs",
    deps = [":echo_client_services_swift"],
    visibility = ["//visibility:public"],
)

swift_grpc_library(
    name = "echo_server_services_swift",
    srcs = [":echo_proto"],
    flavor = "server",
    deps = [":echo_proto_swift"],
    visibility = ["//visibility:public"],
)
